# string_resonator_plugin

./: Cargo.toml  README.md
src/: delay.rs  editor.rs  filter.rs  lfo.rs  lib.rs  model.rs
